Related: fdo#66817 pressing space on a DisclosureButton should toggle it

Change-Id: Ib0f03e4389a35f1eb66c3c5951e89a9f70ec7145